--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@
     <meta name="Etienne Malenfant" content="width=s, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body><h1>Test<h1></body>
 </html>
