Changement du style

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Etienne Malenfant" content="width=s, initial-scale=1.0" />
     <title>Document</title>
+    <style>
+      * {
+        outline: 1px solid red;
+        outline-offset: -1px;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <h1>Portfolio Étienne Malenfant</h1>
+  </body>
 </html>
