--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="Etienne Malenfant" content="width=s, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      * {
-        outline: 1px solid red;
-        outline-offset: -1px;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Portfolio Étienne Malenfant</h1>
+    <p class="par1">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati nobis
+      fugiat atque in inventore asperiores totam iure nemo. Quia iusto aliquam
+      veritatis dolor odio, animi explicabo recusandae. Quasi, cum nesciunt.
+    </p>
+    <div>
+      <h2 class="par1">wassup my man</h2>
+    </div>
   </body>
 </html>
