--- a/index.html
+++ b/index.html
@@ -7,5 +7,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h1>Titre</h1>
+      <h2>
+        <sous-titre>wassup</sous-titre>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis
+          temporibus repudiandae enim sequi suscipit eveniet, omnis aspernatur
+          deserunt neque dignissimos officia est, distinctio harum accusantium
+          laboriosam nisi laborum ullam dolorem.
+        </p>
+      </h2>
+    </div>
+  </body>
 </html>
