Organisation initial du site

--- a/index.html
+++ b/index.html
@@ -8,17 +8,58 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
-      <h1>Titre</h1>
-      <h2>
-        <sous-titre>wassup</sous-titre>
+    <header>
+      <h1>Étienne Malenfant</h1>
+      <nav>
+        <div>
+          <a href="">Présentation</a>
+        </div>
+        <div>
+          <a href="">Contacter moi</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <section class="presentation">
+        <img src="" alt="Photo de ma face" />
         <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis
-          temporibus repudiandae enim sequi suscipit eveniet, omnis aspernatur
-          deserunt neque dignissimos officia est, distinctio harum accusantium
-          laboriosam nisi laborum ullam dolorem.
+          Description de moi Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Fuga atque voluptatum et consequuntur ullam impedit modi, sed,
+          accusantium optio obcaecati voluptas? A iure expedita, dolor maiores
+          maxime sint nesciunt nisi!
         </p>
-      </h2>
-    </div>
+      </section>
+      <section class="projets">
+        <div class="projet1">
+          <h3>Projet2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            earum quod dolore officia natus expedita cumque consectetur repellat
+            voluptatem ipsum saepe rem aliquam reiciendis quos beatae voluptates
+            dolorum, nobis totam!
+          </p>
+        </div>
+        <div class="projet2">
+          <h3>Projet2</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci
+            earum quod dolore officia natus expedita cumque consectetur repellat
+            voluptatem ipsum saepe rem aliquam reiciendis quos beatae voluptates
+            dolorum, nobis totam!
+          </p>
+        </div>
+      </section>
+      <section class="competences">
+        <div>
+          <h3>Mes compétences</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium
+            est necessitatibus saepe perferendis. Repellat, distinctio
+            praesentium? Reprehenderit accusamus tenetur quibusdam nostrum,
+            dolores unde quod voluptas saepe mollitia incidunt ab libero?
+          </p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
